<resources>
    <string name="app_name">praktvosem</string>
    <string name="one">WorldCinema</string>
    <string name="email"> Е-mail</string>
    <string name="pass"> Password</string>
    <string name="voiti"> Войти </string>
    <string name="reg"> Регистрация </string>
    <string name="namefilm">Captain Marvel </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>